@@ -1,3 +1,7 @@
+2002-08-13  Reinhard Max  <max@suse.de>
+
+	* unix/tkUnixSend.c (Tk_SetAppName): Fixed a compiler warning.
+
 2002-08-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* library/demos/image2.tcl: Tweaked the behaviour of the directory
